--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ edition = "2018"
 [features]
 default = ["x11", "wayland"]
 x11 = ["x11-clipboard"]
-wayland = ["smithay-clipboard"]
+wayland = ["wl-clipboard-rs"]
 
 [target.'cfg(windows)'.dependencies]
 clipboard-win = "3.0.2"
@@ -26,4 +26,4 @@ objc-foundation = "0.1"
 
 [target.'cfg(all(unix, not(any(target_os="macos", target_os="android", target_os="ios", target_os="emscripten"))))'.dependencies]
 x11-clipboard = { version = "0.5.1", optional = true }
-smithay-clipboard = { version = "0.6.0", optional = true }
+wl-clipboard-rs = { version = "0.4.1", optional = true }
